tdf#153317: direct SQL: try to detect Bit field in Mysql/MariaDB

Change-Id: I462cb28c15a0cd1d3c93f2335bcac02ca09c78e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152289
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit a16ff0aa4123ce1682a971d66fff60f4ba4606f7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152224
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>